# make-a-game-aah

./: .gitmodules  CMakeLists.txt  CMakePresets.json
script/ai/: generic.lua
script/creatures/: banshee.lua  knight.lua  melistra.lua  peasant.lua  skeleton.lua
script/levels/: academy_basement.lua  academy_hall1.lua  academy_hall2.lua  bridge.lua  bridgeentrance.lua  forest.lua
script/players/: player_commander.lua  player_demonlord.lua  player_highwayman.lua  player_menafus.lua  player_menafus_corrupt.lua  player_peasantlord.lua  player_professor_melistra.lua  player_superlich.lua
script/prefabs/: archer.lua  arrow.lua  assassin.lua  aura.lua  banshee.lua  bar.lua  bear.lua  burning_arrow.lua  demon.lua  firebolt.lua  general.lua  healthbar.lua  knight.lua  leech_life.lua  lich.lua  lifebolt.lua  marksman.lua  melistra.lua  menafus.lua  menafus_corrupt.lua  nightmare.lua  peasant.lua  reticule.lua  shadowblast.lua  shadowbolt.lua  skeletal_archer.lua  skeleton.lua  sparkle.lua  templar.lua  undead_bear.lua  warbear.lua
src/: bloom_blur.fragment.tzsl  bloom_blur.vertex.tzsl  card.cpp  card.hpp  config.hpp  creature.cpp  creature.hpp  deck.cpp  deck.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  level.cpp  level.hpp  main.cpp  player.cpp  player.hpp  prefab.cpp  prefab.hpp  quad_bloom.fragment.tzsl  quad_renderer.cpp  quad_renderer.hpp  render.cpp  render.hpp  save.cpp  save.hpp  script.cpp  script.hpp  ui.cpp  ui.hpp
src/shaders/: quad.vertex.tzsl
